feat(ui): 为 docx/xlsx/pptx 添加 Office 预览 feat(ui): 为 markdown 显示添加 keepalive 支持和竞态条件保护
- 添加渲染版本系统以防止异步操作期间的竞态条件
- 引入 OfficeNativeViewer 组件，支持 Office OpenXML 格式的本地渲染
- 后端为 docx/xlsx/pptx 注入 "native" 提供程序；旧格式仍使用外部程序
- 复制任务和文件系统操作现在仅使目标目录缓存失效以保持一致性
- 目录路径通过强制添加尾部斜杠进行规范化，防止文件/目录歧义
- 移除 WebDAV 复制/移动处理程序中的冗余缓存失效（由文件系统层处理）
- 调整挂载预览页缓存逻辑

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,10 @@
     "chart.js": "^4.4.8",
     "cronstrue": "^1.125.0",
     "docx": "^9.3.0",
+    "docx-preview": "0.3.7",
+    "@vue-office/excel": "1.7.14",
+    "@vue-office/pptx": "1.0.1",
+    "vue-demi": "0.14.6",
     "file-saver": "^2.0.5",
     "hls.js": "^1.6.7",
     "html-to-image": "^1.11.13",
