feat(ui): 使用 snapdom 替换 html-to-image 实现 PNG 导出并支持代理 feat(file-system): 添加用于流式ZIP下载的文件系统访问API
- 当可用时，用原生文件选择器替换基于blob的saveAs
- 添加并发限制器以减少内存/网络峰值
- 在清理/取消时跟踪并中止活动的ZIP可写对象
- 在不支持的浏览器上回退到BlobWriter + file-saver
- 从 html-to-image 迁移到 @zumer/snapdom，以更好地处理跨域资源
- 添加后端代理票据端点，实现安全的资源获取
- 在 markdown 导出中启用外部图片的自动代理使用
- 移除已弃用的 htmlToImage 工具并更新 vite 供应商块
- 升级 zip.js 到 2.8.11 版本，并明确配置 worker/wasm URI
- 在文件篮中添加 zip64 支持以生成大型归档文件

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,8 +27,11 @@
     "@uppy/url": "^4.3.2",
     "@uppy/webcam": "^4.3.2",
     "@uppy/xhr-upload": "^4.4.2",
+    "@vue-office/excel": "1.7.14",
+    "@vue-office/pptx": "1.0.1",
     "@yeger/vue-masonry-wall": "^5.1.4",
-    "@zip.js/zip.js": "^2.7.72",
+    "@zip.js/zip.js": "^2.8.11",
+    "@zumer/snapdom": "^2.0.1",
     "aplayer": "^1.10.1",
     "artplayer": "^5.2.3",
     "autoprefixer": "^10.4.21",
@@ -37,12 +40,8 @@
     "cronstrue": "^1.125.0",
     "docx": "^9.3.0",
     "docx-preview": "0.3.7",
-    "@vue-office/excel": "1.7.14",
-    "@vue-office/pptx": "1.0.1",
-    "vue-demi": "0.14.6",
     "file-saver": "^2.0.5",
     "hls.js": "^1.6.7",
-    "html-to-image": "^1.11.13",
     "libarchive.js": "^2.0.2",
     "mime-db": "^1.54.0",
     "mpegts.js": "^1.8.0",
@@ -56,6 +55,7 @@
     "vite-plugin-pwa": "^1.0.0",
     "vue": "^3.5.13",
     "vue-chartjs": "^5.3.2",
+    "vue-demi": "0.14.6",
     "vue-i18n": "^9.14.3",
     "vue-router": "^4.5.1"
   },
