feat(ui): 添加 HEIC/HEIF 图像预览支持，使用 libheif-js 解码器 feat(ui): 添加Live Photo支持，支持并发图库加载和渐进式渲染
- 添加Live Photo查看器组件，支持HEIC/JPG+MOV检测和播放控制
- 重构图库视图，实现并发图片加载队列和渐进式渲染
- 优化PhotoSwipe，使用itemData过滤器和异步内容加载
- 集成 libheif-js 将 HEIC/HEIF 图像解码为 PNG objectURLs

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,6 +43,7 @@
     "file-saver": "^2.0.5",
     "hls.js": "^1.6.7",
     "libarchive.js": "^2.0.2",
+    "libheif-js": "^1.19.8",
     "mime-db": "^1.54.0",
     "mpegts.js": "^1.8.0",
     "nprogress": "^0.2.0",
