--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "cronstrue": "^1.125.0",
     "docx": "^9.3.0",
     "docx-preview": "0.3.7",
+    "exifreader": "^4.33.1",
     "file-saver": "^2.0.5",
     "hls.js": "^1.6.7",
     "libarchive.js": "^2.0.2",
@@ -61,12 +62,15 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@iconify-json/mdi": "^1.2.3",
     "@originjs/vite-plugin-commonjs": "^1.0.3",
     "@vitejs/plugin-vue": "^5.2.4",
     "eslint": "^9.0.0",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-vue": "^9.0.0",
     "terser": "^5.39.0",
+    "unplugin-icons": "^22.5.0",
+    "unplugin-vue-components": "^30.0.0",
     "vite": "^5.4.19"
   }
 }
