feat(ui): 在媒体灯箱EXIF侧边栏添加GPS位置显示 feat(ui): 为文件查看器添加紧凑的EXIF摘要和嵌入式GPS地图 feat(ui): 将iframe地图替换为交互式leaflet组件
- 添加leaflet依赖用于地图渲染
- 创建带有交互式控件的可重用MapEmbed组件
- 在侧边栏中为位置行显示地图标记图标

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,7 @@
     "hls.js": "^1.6.7",
     "libarchive.js": "^2.0.2",
     "libheif-js": "^1.19.8",
+    "leaflet": "^1.9.4",
     "mime-db": "^1.54.0",
     "mpegts.js": "^1.8.0",
     "nprogress": "^0.2.0",
