feat(admin): 为平台调度器添加倒计时计时器以提高cron触发器可见性
- 暴露 GET /api/admin/scheduled/ticker 接口，返回基于 SCHEDULED_TICK_CRON 的下次触发时间
- 在统计卡片中显示实时倒计时，与服务器时钟自动同步，到期时静默刷新
- 在 wrangler.toml 和 package.json 脚本中配置 SCHEDULED_TICK_CRON，适用于 Workers 和 Docker

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,9 +5,10 @@
   "main": "unified-entry.js",
   "scripts": {
     "dev": "wrangler dev --local",
+    "dev:scheduled": "wrangler dev --local --test-scheduled",
     "deploy": "wrangler publish",
     "deploy:spa": "wrangler deploy --config wrangler.spa.toml",
-    "docker-dev": "cross-env PORT=8787 ENCRYPTION_SECRET=default-encryption-key DATA_DIR=./data tsx unified-entry.js",
+    "docker-dev": "cross-env PORT=8787 ENCRYPTION_SECRET=default-encryption-key DATA_DIR=./data SCHEDULED_TICK_CRON=\"*/1 * * * *\" tsx unified-entry.js",
     "docker-start": "cross-env PORT=8787 DATA_DIR=/data tsx unified-entry.js"
   },
   "keywords": [
