--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "docx-preview": "0.3.7",
     "exifreader": "^4.33.1",
     "file-saver": "^2.0.5",
+    "foliate-js": "git+https://github.com/johnfactotum/foliate-js.git#6b11e1744346f60504b727984f7d42f0fef3ab54",
     "hls.js": "^1.6.7",
     "leaflet": "^1.9.4",
     "libarchive.js": "^2.0.2",
