fix(deps): 使 @vue-office/* 导入与 pnpm 兼容 feat(preview): 为预览提供商添加base64编码的URL令牌 feat(error-handling): 添加客户端安全错误清理和请求ID跟踪 feat(preview): 统一预览工具栏并添加可折叠规则编辑器 build(docker):  优化多阶段构建和依赖解析
- 通过可配置的npm注册表和ci安装简化后端dockerfile
- 将foliate-js切换为tarball url以加快安装速度
- 为webworkify-webpack解析添加npm覆盖
- 更新nginx配置以使用default_server和ipv6支持
- 重构iframe预览，将提供者选择委托给父组件
- 为文本、图像、视频、音频和存档预览添加PreviewChannelToolbar支持
- 实现可折叠/展开的预览规则，支持上/下重新排序
- 通过事件暴露提供者选项，以启用外部工具栏控制
- 为iframe预览添加全屏样式
- 引入 $b64e_url 和 $b64e_download_url 模板变量
- 在URL编码前将预览/下载URL编码为base64，以实现安全的iframe传输
- 更新英文/中文本地化中的占位符提示，以记录新令牌
- 保持与现有 $url/$e_url 占位符的向后兼容性

--- a/docker/frontend/Dockerfile
+++ b/docker/frontend/Dockerfile
@@ -3,14 +3,11 @@ FROM node:20-alpine AS build
 
 WORKDIR /app
 
-# 安装必要的系统依赖
-RUN apk add --no-cache git
+# 复制依赖（利用 Docker layer cache）
+COPY frontend/package.json frontend/package-lock.json ./
 
-# 复制前端package.json
-COPY frontend/package.json ./
-
-# 安装依赖 - 使用npm install重新生成lock文件
-RUN npm install --cache /tmp/npm-cache
+# 安装依赖（使用 lock 文件，关闭 audit/fund 减少噪音）
+RUN npm ci --cache /tmp/npm-cache --no-audit --no-fund
 
 # 复制前端源代码
 COPY frontend/ ./
@@ -43,4 +40,4 @@ RUN chmod +x /entrypoint.sh
 EXPOSE 80
 
 # 使用启动脚本
-CMD ["/entrypoint.sh"] 
+CMD ["/entrypoint.sh"]
