--- a/docker/backend/Dockerfile
+++ b/docker/backend/Dockerfile
@@ -1,31 +1,18 @@
-# 第一阶段：构建sqlite3模块
-FROM node:22-alpine AS builder
+# 第一阶段：安装依赖并编译原生模块（构建阶段）
+FROM node:22-alpine AS deps
 
 WORKDIR /app
 
-# 设置Alpine镜像源以加快软件包安装
-# 使用多个镜像源以支持全球不同地区（注释掉不需要的）
-RUN echo "https://mirrors.aliyun.com/alpine/latest-stable/main/" > /etc/apk/repositories && \
-    echo "https://mirrors.aliyun.com/alpine/latest-stable/community/" >> /etc/apk/repositories
-# 或使用 USTC 镜像 (中国)
-#RUN echo "https://mirrors.ustc.edu.cn/alpine/latest-stable/main/" > /etc/apk/repositories && \
-#    echo "https://mirrors.ustc.edu.cn/alpine/latest-stable/community/" >> /etc/apk/repositories
-# 或使用官方镜像 (全球)
-#RUN echo "https://dl-cdn.alpinelinux.org/alpine/latest-stable/main/" > /etc/apk/repositories && \
-#    echo "https://dl-cdn.alpinelinux.org/alpine/latest-stable/community/" >> /etc/apk/repositories
+# 可选：设置 npm registry（国内环境可改成 https://registry.npmmirror.com/）
+ARG NPM_REGISTRY=https://registry.npmjs.org/
+RUN npm config set registry ${NPM_REGISTRY}
 
-# 加速npm安装
-RUN npm config set registry https://registry.npmmirror.com/
+# 先复制依赖清单，利用 Docker layer cache
+COPY backend/package.json backend/package-lock.json ./
 
-# 复制package.json和package-lock.json
-COPY backend/package*.json ./
-
-# 预先安装sqlite3相关依赖(最常变化的模块)，利用Docker缓存层
-RUN npm install sqlite3 --verbose
-
-# 安装编译依赖，优化缓存，使用--no-cache-dir减少npm缓存
+# 构建期依赖：用于编译 sqlite3/better-sqlite3 等原生模块
 RUN apk add --no-cache --virtual .build-deps python3 make g++ sqlite-dev && \
-    npm install --verbose --include=optional --no-cache-dir && \
+    npm ci --include=optional --no-audit --no-fund && \
     apk del .build-deps
 
 # 第二阶段：创建最终镜像
@@ -33,17 +20,11 @@ FROM node:22-alpine
 
 WORKDIR /app
 
-# 设置Alpine镜像源，与构建阶段保持一致
-RUN echo "https://mirrors.aliyun.com/alpine/latest-stable/main/" > /etc/apk/repositories && \
-    echo "https://mirrors.aliyun.com/alpine/latest-stable/community/" >> /etc/apk/repositories
-
-# 只安装运行时所需的sqlite库
+# 运行时 sqlite 动态库
 RUN apk add --no-cache sqlite-libs
 
-# 复制第一阶段构建好的node_modules
-COPY --from=builder /app/node_modules ./node_modules
-
-# 复制应用代码
+# 复制构建阶段产物
+COPY --from=deps /app/node_modules ./node_modules
 COPY backend/ ./
 
 # 创建数据目录
