fix(deps): 使 @vue-office/* 导入与 pnpm 兼容 feat(preview): 为预览提供商添加base64编码的URL令牌 feat(error-handling): 添加客户端安全错误清理和请求ID跟踪 feat(preview): 统一预览工具栏并添加可折叠规则编辑器 build(docker):  优化多阶段构建和依赖解析
- 通过可配置的npm注册表和ci安装简化后端dockerfile
- 将foliate-js切换为tarball url以加快安装速度
- 为webworkify-webpack解析添加npm覆盖
- 更新nginx配置以使用default_server和ipv6支持
- 重构iframe预览，将提供者选择委托给父组件
- 为文本、图像、视频、音频和存档预览添加PreviewChannelToolbar支持
- 实现可折叠/展开的预览规则，支持上/下重新排序
- 通过事件暴露提供者选项，以启用外部工具栏控制
- 为iframe预览添加全屏样式
- 引入 $b64e_url 和 $b64e_download_url 模板变量
- 在URL编码前将预览/下载URL编码为base64，以实现安全的iframe传输
- 更新英文/中文本地化中的占位符提示，以记录新令牌
- 保持与现有 $url/$e_url 占位符的向后兼容性

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,7 +42,7 @@
     "docx-preview": "0.3.7",
     "exifreader": "^4.33.1",
     "file-saver": "^2.0.5",
-    "foliate-js": "git+https://github.com/johnfactotum/foliate-js.git#6b11e1744346f60504b727984f7d42f0fef3ab54",
+    "foliate-js": "https://codeload.github.com/johnfactotum/foliate-js/tar.gz/6b11e1744346f60504b727984f7d42f0fef3ab54",
     "hls.js": "^1.6.7",
     "leaflet": "^1.9.4",
     "libarchive.js": "^2.0.2",
@@ -76,5 +76,8 @@
     "unplugin-icons": "^22.5.0",
     "unplugin-vue-components": "^30.0.0",
     "vite": "^5.4.19"
+  },
+  "overrides": {
+    "webworkify-webpack": "https://registry.npmjs.org/webworkify-webpack/-/webworkify-webpack-2.1.5.tgz"
   }
 }
