--- a/frontend/package.json
+++ b/frontend/package.json
@@ -61,7 +61,8 @@
     "vue-chartjs": "^5.3.2",
     "vue-demi": "0.14.6",
     "vue-i18n": "^9.14.3",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "webworkify-webpack": "2.1.5"
   },
   "devDependencies": {
     "@iconify-json/heroicons-outline": "^1.2.1",
@@ -78,6 +79,8 @@
     "vite": "^5.4.19"
   },
   "overrides": {
-    "webworkify-webpack": "https://registry.npmjs.org/webworkify-webpack/-/webworkify-webpack-2.1.5.tgz"
+    "mpegts.js": {
+      "webworkify-webpack": "2.1.5"
+    }
   }
 }
