--- a/docker/frontend/Dockerfile
+++ b/docker/frontend/Dockerfile
@@ -1,13 +1,15 @@
 # 构建阶段
-FROM node:20-alpine AS build
+FROM node:22-alpine AS build
 
 WORKDIR /app
 
 # 复制依赖（利用 Docker layer cache）
 COPY frontend/package.json frontend/package-lock.json ./
 
-# 安装依赖（使用 lock 文件，关闭 audit/fund 减少噪音）
-RUN npm ci --cache /tmp/npm-cache --no-audit --no-fund
+# 安装依赖
+RUN npm ci --cache /tmp/npm-cache
+
+RUN node -v && npm -v
 
 # 复制前端源代码
 COPY frontend/ ./
