feat(ui): 用 notivue 通知系统替换自定义 toast fix: i18n
- 将全局消息处理从自定义实现迁移到 notivue
- 更新 App.vue 以使用带有滑动和进度条的 Notivue 组件

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,6 +49,7 @@
     "libheif-js": "^1.19.8",
     "mime-db": "^1.54.0",
     "mpegts.js": "^1.8.0",
+    "notivue": "^2.4.5",
     "nprogress": "^0.2.0",
     "photoswipe": "^5.4.4",
     "pinia": "^3.0.3",
