--- a/.dockerignore
+++ b/.dockerignore
@@ -4,7 +4,9 @@
 
 # 本地构建产物 / 依赖缓存
 **/node_modules
-**/dist
+/dist
+/frontend/dist
+/backend/dist
 **/.vite
 **/.cache
 
@@ -15,6 +17,7 @@ logs
 *.log
 
 # 本地工具与临时文件
+.codex
 .DS_Store
 Thumbs.db
 *.swp
