refactor(frontend): 迁移至VueUse组合式函数以提升响应性与生命周期管理
- 添加@vueuse/core依赖实现统一响应式工具
- 使用useEventListener替代手动事件监听器实现自动清理
- 采用useLocalStorage/useSessionStorage替代原生localStorage/sessionStorage
- 以useTimeoutFn/useIntervalFn取代setTimeout/setInterval
- 通过VueUse标准化防抖、剪贴板等工具函数
- 通过自动监听器清理提升内存泄漏防护
- 增强所有前端组件与组合式函数的代码一致性

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "@uppy/xhr-upload": "^4.4.2",
     "@vue-office/excel": "1.7.14",
     "@vue-office/pptx": "1.0.1",
+    "@vueuse/core": "^14.1.0",
     "@yeger/vue-masonry-wall": "^5.1.4",
     "@zip.js/zip.js": "^2.8.11",
     "@zumer/snapdom": "^2.0.1",
