--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cloudpaste-api",
-  "version": "1.7.0",
+  "version": "1.8.0",
   "description": "CloudPaste API基于Cloudflare Workers和D1数据库",
   "main": "unified-entry.js",
   "scripts": {
@@ -27,6 +27,7 @@
     "@aws-sdk/client-s3": "3.726.1",
     "@aws-sdk/lib-storage": "3.726.1",
     "@aws-sdk/s3-request-presigner": "3.726.1",
+    "@huggingface/hub": "^2.7.1",
     "@hono/node-server": "^1.19.6",
     "better-sqlite3": "^12.5.0",
     "fast-xml-parser": "^5.2.5",
