refactor(storage): 在所有存储驱动中强制实施仅子路径的约定并统一方法签名
- 更新所有驱动公共方法，统一接收仅含子路径的参数及上下文对象
- 跨驱动统一多部分上传、预签名、直链及代理能力标准

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,8 @@
   "description": "CloudPaste API基于Cloudflare Workers和D1数据库",
   "main": "unified-entry.js",
   "scripts": {
+    "test": "node --test --test-concurrency=1",
+    "test:parallel": "node --test",
     "dev": "wrangler dev --local",
     "dev:scheduled": "wrangler dev --local --test-scheduled",
     "deploy": "wrangler publish",
